# esg-report-analyzer

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: keywords.yaml  settings.yaml
src/esg_analyzer/: __init__.py  cli.py  config.py
src/esg_analyzer/analyzer/: __init__.py  keywords.py  models.py
src/esg_analyzer/extractor/: __init__.py  pdf.py
src/esg_analyzer/reporter/: __init__.py  console.py  csv_export.py  html.py
src/esg_analyzer/scraper/: __init__.py  downloader.py  edgar.py
tests/: __init__.py  test_analyzer.py  test_extractor.py  test_models.py  test_reporter.py
